fixed css spacing issue

--- a/client/src/components/SuggestionPics.css
+++ b/client/src/components/SuggestionPics.css
@@ -1,9 +1,3 @@
-.suggestion-pics {
-  display: flex;
-  justify-content: space-between;
-  width: 250px;
-}
-
 .button {
   border-radius: 100%;
   height: 2em;
