--- a/client/src/components/SuggestionsContainer.css
+++ b/client/src/components/SuggestionsContainer.css
@@ -6,21 +6,28 @@
   font-size: 20px
 }
 
-@media (min-width: 300px) {
+#Suggestions {
+  display: grid;
+  grid-template-columns: 1fr;
+  grid-auto-rows: auto;
+  margin: 1em 0em;
+}
+
+@media (min-width: 600px) {
   #Suggestions {
     display: grid;
-    grid-gap: 2em;
+    grid-gap: 3em;
     grid-template-columns: 1fr;
-    grid-auto-rows: 250px;
+    grid-auto-rows: auto;
     margin: 2em 0em;
   }
 }
 
-@media (min-width: 900px) {
+@media (min-width: 960px) {
   #Suggestions {
     display: grid;
     grid-gap: 2em;
     grid-template-columns: 1fr 1fr;
-    grid-auto-rows: 250px;
+    grid-auto-rows: auto;
   }
 }
